frontend/shared/scss/components/icons.scss
@use '../base/variables' as *;
@use '../base/text-styles';


.icon-base {

    &:before {
        line-height: 1;
        font-size: 24px;
        vertical-align: middle !important;
        font-family: icons !important;
        font-style: normal;
        font-weight: normal !important;
    }
}

.icon {
    width: 24px;
    font-size: 24px;
    box-sizing: content-box;
    overflow: hidden;
    white-space: nowrap;
    
    display: inline; // fallback
    display: inline-flex; // needed for proper vertical alignemnt of icons
    vertical-align: middle;
    
    &.light-gray {
        color: $color-gray-light;
    }

    &.gray {
        color: $color-gray-dark;
    }

    &.green {
        color: $color-success;
    }

    &.red {
        color: $color-error;
    }

    &.primary {
        color: $color-primary;
    }

    &.yellow {
        color: $color-warning-primary;
    }

    &.middle {
        vertical-align: middle;
    }

    &:before {
        vertical-align: middle !important;
    }

    /*&.add:after {
        font-icon: url('@stamhoofd/assets/images/icons/gray/add.svg');
    }

    &.search:after {
        font-icon: url('@stamhoofd/assets/images/icons/search.svg');
    }

    &.help:after {
        font-icon: url('@stamhoofd/assets/images/icons/help.svg');
    }

    &.copy:after {
        font-icon: url('@stamhoofd/assets/images/icons/copy.svg');
    }

    &.arrow-left:after {
        font-icon: url(@stamhoofd/assets/images/icons/arrow-left-big.svg);
    }

    &.arrow-right:after {
        font-icon: url(@stamhoofd/assets/images/icons/arrow-right-big.svg);
    }

    &.arrow-up:after {
        font-icon: url(@stamhoofd/assets/images/icons/arrow-up-big.svg);
    }

    &.arrow-down:after {
        font-icon: url(@stamhoofd/assets/images/icons/arrow-down-big.svg);
    }

    &.clock:after {
        font-icon: url(@stamhoofd/assets/images/icons/gray/clock.svg);
    }

    &.clock-small:after {
        font-icon: url(@stamhoofd/assets/images/icons/gray/clock-small.svg);
    }

    &.trash:after {
        font-icon: url(@stamhoofd/assets/images/icons/trash.svg);
    }

    &.arrow-right-small:after {
        font-icon: url(@stamhoofd/assets/images/icons/arrow-right-small.svg);
    }

     &.arrow-down-small:after {
        font-icon: url(@stamhoofd/assets/images/icons/arrow-down-small.svg);
    }

    &.close:after {
        font-icon: url(@stamhoofd/assets/images/icons/close.svg);
    }

    &.more:after {
        font-icon: url(@stamhoofd/assets/images/icons/more.svg);
    }

    &.privacy:after {
        font-icon: url(@stamhoofd/assets/images/icons/privacy.svg);
    }

    &.edit:after {
        font-icon: url(@stamhoofd/assets/images/icons/pencil.svg);
    }

    &.user:after {
        font-icon: url(@stamhoofd/assets/images/icons/user.svg);
    }

    &.card:after {
        font-icon: url(@stamhoofd/assets/images/icons/card.svg);
    }

    &.logout:after {
        font-icon: url(@stamhoofd/assets/images/icons/logout.svg);
    }

    &.settings:after {
        font-icon: url(@stamhoofd/assets/images/icons/settings.svg);
    }

    &.group:after {
        font-icon: url(@stamhoofd/assets/images/icons/group.svg);
    }

    &.success:after {
        font-icon: url(@stamhoofd/assets/images/icons/success.svg);
    }

    &.star:after {
        font-icon: url(@stamhoofd/assets/images/icons/star.svg);
    }

    &.star-line:after {
        font-icon: url(@stamhoofd/assets/images/icons/star-line.svg);
    }

    &.error:after {
        font-icon: url(@stamhoofd/assets/images/icons/error.svg);
    }

    &.clock:after {
        font-icon: url(@stamhoofd/assets/images/icons/clock.svg);
    }

    &.new:after {
        font-icon: url(@stamhoofd/assets/images/icons/new.svg);
    }

    &.file:after {
        font-icon: url(@stamhoofd/assets/images/icons/file.svg);
    }

    &.lock:after {
        font-icon: url(@stamhoofd/assets/images/icons/lock.svg);
    }

    &.key:after {
        font-icon: url(@stamhoofd/assets/images/icons/key.svg);
    }

    &.key-lost:after {
        font-icon: url(@stamhoofd/assets/images/icons/key-lost.svg);
    }

    &.lock-missing:after {
        font-icon: url(@stamhoofd/assets/images/icons/lock-missing.svg);
    }

    &.share:after {
        font-icon: url(@stamhoofd/assets/images/icons/share.svg);
    }

    &.info:after {
        font-icon: url(@stamhoofd/assets/images/icons/info.svg);
    }

    &.info-filled:after {
        font-icon: url(@stamhoofd/assets/images/icons/info-filled.svg);
    }

    &.warning:after {
        font-icon: url(@stamhoofd/assets/images/icons/warning.svg);
    }

    &.exclamation:after {
        font-icon: url(@stamhoofd/assets/images/icons/exclamation.svg);
    }

    &.exclamation-two:after {
        font-icon: url(@stamhoofd/assets/images/icons/exclamation-two.svg);
    }

    &.bold:after {
        font-icon: url(@stamhoofd/assets/images/icons/bold.svg);
    }

    &.italic:after {
        font-icon: url(@stamhoofd/assets/images/icons/italic.svg);
    }

    &.underline:after {
        font-icon: url(@stamhoofd/assets/images/icons/underline.svg);
    }

    &.ul:after {
        font-icon: url(@stamhoofd/assets/images/icons/ul.svg);
    }

    &.ol:after {
        font-icon: url(@stamhoofd/assets/images/icons/ol.svg);
    }

    &.link:after {
        font-icon: url(@stamhoofd/assets/images/icons/link.svg);
    }

    &.sync:after {
        font-icon: url(@stamhoofd/assets/images/icons/sync.svg);
    }

    &.upload:after {
        font-icon: url(@stamhoofd/assets/images/icons/upload.svg);
    }

    &.download:after {
        font-icon: url(@stamhoofd/assets/images/icons/download.svg);
    }

    &.external:after {
        font-icon: url(@stamhoofd/assets/images/icons/external.svg);
    }

    &.unregister:after {
        font-icon: url(@stamhoofd/assets/images/icons/unregister.svg);
    }

    &.gift:after {
        font-icon: url(@stamhoofd/assets/images/icons/gift.svg);
    }

    &.basket:after {
        font-icon: url(@stamhoofd/assets/images/icons/basket.svg);
    }

    &.flag:after {
        font-icon: url(@stamhoofd/assets/images/icons/flag.svg);
    }

    &.plus:after {
        font-icon: url(@stamhoofd/assets/images/icons/plus.svg);
    }

    &.min:after {
        font-icon: url(@stamhoofd/assets/images/icons/min.svg);
    }

    &.canceled:after {
        font-icon: url(@stamhoofd/assets/images/icons/canceled.svg);
    }

    &.stats:after {
        font-icon: url(@stamhoofd/assets/images/icons/stats.svg);
    }

    &.qr-code:after {
        font-icon: url(@stamhoofd/assets/images/icons/qr-code.svg);
    }

    &.undo:after {
        font-icon: url(@stamhoofd/assets/images/icons/undo.svg);
    }

    &.redo:after {
        font-icon: url(@stamhoofd/assets/images/icons/redo.svg);
    }

    &.play:after {
        font-icon: url(@stamhoofd/assets/images/icons/play.svg);
    }

    &.wifi:after {
        font-icon: url(@stamhoofd/assets/images/icons/wifi.svg);
    }

    &.lightning:after {
        font-icon: url(@stamhoofd/assets/images/icons/lightning.svg);
    }

    &.reverse:after {
        font-icon: url(@stamhoofd/assets/images/icons/reverse.svg);
    }

    &.flashlight:after {
        font-icon: url(@stamhoofd/assets/images/icons/flashlight.svg);
    }
    
    &.eye:after {
        font-icon: url(@stamhoofd/assets/images/icons/eye.svg);
    }
    
    &.filter:after {
        font-icon: url(@stamhoofd/assets/images/icons/filter.svg);
    }

    &.language:after {
        font-icon: url(@stamhoofd/assets/images/icons/language.svg);
    }

    &.feedback:after {
        font-icon: url(@stamhoofd/assets/images/icons/feedback.svg);
    }*/
}

.android-icons {
    /*.icon {
        &.share:after {
            font-icon: url(@stamhoofd/assets/images/icons/share-android.svg);
        }
    }*/
}

